--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "example-bot"
 version = "0.1.0"
 description = ""
-authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
+authors = ["flipper"]
 readme = "README.md"
 packages = [{include = "example_bot"}]
 
