--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ aiogram = "^2.25.1"
 python-dotenv = "^1.0.0"
 fuzzywuzzy  = "^0.18.0"
 requests = "^2.28.2"
-beautifulsoup = "^4.11.2"
+beautifulsoup4 = "^4.11.2"
 
 
 [build-system]
